<resources>
    <string name="remote_url_default">http://oxygen.plonge.mobi</string>
    <string name="save_login_default">false</string>
    <string name="keep_connection_default">false</string>
    <string name="retrieve_all_type_fiche_default">false</string>
    <string name="retrieve_length_default">0</string>
    <string name="plonger_profondeur_default">40</string>
    <string name="plonger_duree_default">20</string>
	<string name="nombre_plongeur_suggerer">15</string>
    <string name="app_name">Oxygen</string>
    <string name="action_settings">Settings</string>
    <string name="general_modifier">Modifier</string>
    <string name="menu_synch">Sychroniser</string>
    <string name="menu_delete">Supprimer</string>
    <string name="menu_save">Enregistrer</string>
    <string name="menu_valider_fiche">Valider la fiche</string>
    <string name="menu_add_fiche">Créer une fiche</string>
    <string name="menu_param">Parametres</string>
    <string name="menu_logout">Deconnexion</string>
    <string name="parametre_title">Paramètres</string>
    <string name="parametre_remote_url">Addresse du serveur: </string>
    <string name="parametre_save_login">Se souvenir du login</string>
    <string name="parametre_keep_connection">Rester connecté</string>
    <string name="parametre_retrieve_type_all">Récupérer toute les fiches</string>
    <string name="parametre_retrieve_type_only_own">Récupérer seulement mes fiches</string>
    <string name="parametre_retrieve_length_label_zero">Récupère uniquement les fiches du jour actuel</string>
    <plurals name="parametre_retrieve_length_label">
        <item quantity="zero">Récupère uniquement les fiches du jour actuel</item>
        <item quantity="one">Récupère les fiches du prochain jour</item>
        <item quantity="other">Récupère les fiches des %d prochains jours</item>
    </plurals>
    <string name="parametre_last_synch_label">Dernière synchronisation :</string>
    <string name="parametre_saved">Paramètres enregistrés</string>
    <string name="login_cancel">Annuler</string>
    <string name="login_login">Login</string>
    <string name="login_placeholder_password">Mot de passe</string>
    <string name="login_placeholder_login">Nom d\'utilisateur</string>
    <string name="login_title">Connexion</string>
    <string name="login_invalide">identifiants invalides</string>
    <string name="imageTitle">Un beau logo mon flavio</string>
    <string name="imageAnnuler">Cross icon with Annuler string</string>
    <string name="imageValider">Validate icon with Valider string</string>
    <string name="login_aucun_utilisateur">Aucun utilisateur d\'enregistrer sur l\'appareil, veuillez synchroniser l\'application</string>
    <string name="title_activity_list">Liste des fiches</string>
    <string name="list_icon_edit">Editable</string>
    <string name="list_icon_valid">Validé</string>
    <string name="list_fiche_number">n°X</string>
    <string name="list_fiche_desc">Plongée [type] à [lieu]</string>
    <plurals name="list_fiche_perso_title">
        <item quantity ="zero">Mes fiches (%d)</item>
        <item quantity ="one">Ma fiche (%d)</item>
        <item quantity ="other">Mes fiches (%d)</item>
    </plurals>
     <plurals name="list_fiche_autre_title">
        <item quantity ="zero">Autres fiches (%d)</item>
        <item quantity ="one">Autre fiche (%d)</item>
        <item quantity ="other">Autres fiches (%d)</item>
    </plurals>
    <string name="list_fiche_aucune_fiche">Aucune fiche de sécurité enregistrée sur l\'appareil</string>
	<string name="title_activity_fiche_securite">Fiche de Sécurité</string>
    <string name="title_activity_fiche_securite_info">Fiche</string>
    <string name="fiche_infos_title_palanquees">Palanquées :</string>
    <string name="fiche_infos_date_labelle">Date :</string>
    <string name="fiche_infos_heure_labelle">Heure :</string>
    <string name="fiche_infos_site_labelle">Site :</string>
    <string name="fiche_infos_directeur_plonge_labelle">Directeur :</string>
    <string name="fiche_infos_embarcation_labelle">Embarcation :</string>
     <plurals name="palanquee_title">
        <item quantity="one">Palanquée</item>
        <item quantity="other">Palanquées</item>
    </plurals>
    <string name="fiche_info_suppression_confirm">Fiche de sécurité supprimée</string>
    <string name="fiche_info_cloture_confirm">Fiche de sécurité cloture</string>
    <string name="fiche_info_cloture_problem">Un problème est survenu lors de la cloture de la fiche, veuillez contacter le support</string>
    <string name="fiche_securite_enregistrement_ok">Fiche de sécurité enregistrée</string>
    <string name="fiche_securite_enregistrement_probleme">Un problème est survenu lors de l\'enregistrement de la fiche, veuillez contacter le support</string>
    <string name="fiche_info_dialog_date_title">Date de plongée</string>
    <string name="fiche_info_dialog_site_title">Site de plongée</string>
    <string name="fiche_info_dialog_directeur_plonge_title">Directeur de plongée</string>
    <string name="fiche_info_dialog_embarcation_title">Embarcation</string>
    <string name="fiche_info_dialog_suppression">Voulez-vous vraiment supprimer cette fiche de sécurité ?</string>
    <string name="fiche_info_dialog_cloture">Voulez-vous vraiment cloturer cette fiche ? (il ne sera plus possible de la modifier par la suite, et elle sera archivée sur le serveur distant lors de la prochaine synchronisation)</string>
    <string name="fiche_info_dialog_quitter_sauvegrder">Cette fiche de sécurité a été modifiée, voulez-vous l\'enregistrer ?</string>
    <string name="fiche_info_dialog_quitter">Quitter</string>
    <string name="fiche_info_dialog_sauvegarder">Sauvegarder</string>
    <plurals name="fiche_info_dialog_erreurs">
        <item quantity="one">Erreur de gestion :</item>
        <item quantity="other">Erreurs de gestion :</item>
    </plurals>
    <string name="title_activity_palanquee">Palanquée</string>
    <string name="palanquee_heure_labelle">Heure :</string>
    <string name="palanquee_info_moniteur_labelle">Moniteur :</string>
    <string name="palanquee_info_gaz_labelle">Type de gaz :</string>
    <string name="palanquee_info_plongee_labelle">Type de plongée :</string>
    <string name="palanquee_info_profondeur_prevue_labelle">Profondeur prévue :</string>
    <string name="palanquee_info_profondeur_realisee_moniteur_labelle">Prof. réalisée (moni) :</string>
    <string name="palanquee_info_duree_prevue_labelle">Durée prévue :</string>
    <string name="palanquee_info_duree_realisee_moniteur_labelle">Durée réalisée (moni):</string>
    <plurals name="palanquee_plongeur_title">
        <item quantity="one">Liste de plongeur</item>
        <item quantity="other">Liste des plongeurs</item>
    </plurals>
    <string name="palanquee_dialog_suppression_confirm">Palanquee %s supprimé</string>
    <string name="palanquee_dialog_profondeur_realisee_moniteur_title">Profondeur réalisée par le moniteur</string>
    <string name="palanquee_dialog_profondeur_prevue_title">Profondeur prévue</string>
    <string name="palanquee_dialog_duree_realisee_moniteur_title">Durée réalisée par le moniteur</string>
    <string name="palanquee_dialog_duree_prevue_title">Durée prévue</string>
    <string name="palanquee_dialog_heure_title">Heure de plongée</string>
    <string name="palanquee_dialog_type_gaz_title">Type de gaz</string>
    <string name="palanquee_dialog_type_plongee_title">Type de plongée</string>
    <string name="palanquee_dialog_moniteur_title">Moniteur</string>
    <string name="palanquee_dialog_suppression">Voulez-vous vraiment supprimer la palanquée %s ?</string>
    <string name="palanquee_dialog_ajout_plongeur_titre">Ajouter un plongeur</string>
    <string name="title_activity_plongeur">Plongeur</string>
    <string name="plongeur_nom_labelle">Nom :</string>
    <string name="plongeur_prenom_labelle">Prenom :</string>
    <string name="plongeur_aptitudes_labelle">Aptitudes :</string>
    <string name="plongeur_date_naissance_labelle">Date de naissance :</string>
    <string name="plongeur_profondeur_realisee_labelle">Profondeur realisée :</string>
    <string name="plongeur_duree_realisee_labelle">Durée réalisée :</string>
    <string name="plongeur_telephone_labelle">Téléphone : </string>
    <string name="plongeur_telephone_urgence_labelle">Téléphone (urgence) :</string>
    <string name="plongeur_dialog_suppression_confirm">Plongeur %s supprimé</string>
    <string name="plongeur_dialog_nom_title">Nom du plongeur</string>
    <string name="plongeur_dialog_prenom_title">Prénom du plongeur</string>
    <string name="plongeur_dialog_profondeur_realise_title">Profondeur réalisée par ce plongeur</string>
    <string name="plongeur_dialog_duree_realisee_title">Durée réalisée par ce plongeur</string>
    <string name="plongeur_dialog_aptitudes_title">Aptitudes du plongeur</string>
    <string name="plongeur_dialog_date_naissance_title">Date de naissance</string>
    <string name="plongeur_dialog_telephone_title">Téléphone personnel du plongeur</string>
    <string name="plongeur_dialog_telephone_urgence_title">Téléphone de la personne à contacter en cas d\'urgence</string>
    <string name="plongeur_dialog_suppression">Voulez-vous vraiment supprimer le plongeur %s ?</string>
    <string name="dialog_point">.</string>
    <string name="dialog_heure"> h </string>
    <string name="dialog_minute"> m </string>
    <string name="dialog_secondes"> s </string>
    <string name="dialog_now">Maintenant</string>
    <string name="dialog_ok">Valider</string>
    <string name="dialog_confirm">Confirmer</string>
    <string name="dialog_annuler">Annuler</string>
    <string name="dialog_moi">Moi</string>
    <string name="dialog_aucun">Aucun</string>
    <string name="dialog_corriger">Corriger</string>
    <string name="synch_start">Début de la synchronisation</string>
    <string name="synch_success">Synchronisation effectuée</string>
    <string name="synch_error">Erreur lors de la synchronisation: %s</string>
    <string name="synch_error_host_unknown">Addresse du serveur incorrect</string>
    <string name="synch_error_timeout">Pas de réponse du serveur (timeout)</string>
    <string name="synch_error_generation">Impossible de récupérer les données à envoyer</string>
    <string name="synch_error_older_version">Une nouvelle version de l\'application est nécessaire pour ce synchroniser avec ce serveur</string>
    <string name="synch_error_newer_version">Une mise à jours du serveur est nécessaire pour ce synchroniser avec cette application</string>
    <string name="synch_error_no_data">Aucune données récupérés par le serveur</string>
    <string name="synch_error_parse">Impossible de lire les données récupérées</string>
    <string name="synch_error_no_connection">Appareil non connecté au réseau de données</string>
</resources>