<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.deep_blue.oxygen.activity.LoginActivity" >

    <item
        android:id="@+id/itemValide"
        android:enabled="true"
        android:icon="@drawable/btn_check_on"
        android:showAsAction="always"
        android:title="@string/menu_valider_fiche"
        android:titleCondensed="@string/menu_valider_fiche"
        android:visible="true">
    </item> 
    
    <item
        android:id="@+id/itemSave"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_save"
        android:showAsAction="always"
        android:title="@string/menu_save"
        android:titleCondensed="@string/menu_save"
        android:visible="true">
    </item> 
    
    <item
        android:id="@+id/itemDelete"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_delete"
        android:showAsAction="always"
        android:title="@string/menu_delete"
        android:titleCondensed="@string/menu_delete"
        android:visible="true">
    </item>

</menu>