<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.deep_blue.oxygen.ListActivity" >

    <item
        android:id="@+id/itemAdd"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_add"
        android:showAsAction="always"
        android:title="@string/menu_add_fiche"
        android:titleCondensed="@string/menu_add_fiche"
        android:visible="true">
    </item>
    <item
        android:id="@+id/itemParam"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_preferences"
        android:menuCategory="container"
        android:showAsAction="always"
        android:title="@string/menu_param"
        android:titleCondensed="@string/menu_param"
        android:visible="true">
    </item>
    <item
        android:id="@+id/itemSync"
        android:enabled="true"
        android:icon="@android:drawable/ic_popup_sync"
        android:showAsAction="always"
        android:title="@string/menu_synch"
        android:titleCondensed="@string/menu_synch"
        android:visible="true">
    </item>

</menu>