<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gen"
    android:gravity="center"
    tools:context="com.deep_blue.oxygen.activity.ParametreActivity" >

    <TableRow
        android:id="@+id/parametre_remote_url_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/list_item_background_1"
        android:padding="@dimen/panel_padding_size" >

        <TextView
            android:id="@+id/textView_parametre_remote_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/parametre_remote_url" />
    </TableRow>

    <TableRow
        android:id="@+id/parametre_remote_url_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/list_item_background_1"
        android:padding="@dimen/panel_padding_size" >

        <EditText
            android:id="@+id/editText_parametre_remote_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri" >
        </EditText>
    </TableRow>

    <TableRow
        android:id="@+id/parametre_save_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/list_item_background_2"
        android:orientation="vertical"
        android:padding="@dimen/panel_padding_size" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <CheckBox
                android:id="@+id/checkBox_save_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/parametre_save_login" />

            <CheckBox
                android:id="@+id/checkBox_keep_connection"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/parametre_keep_connection" />
        </LinearLayout>
    </TableRow>

    <TableRow
        android:id="@+id/parametre_last_synch_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/list_item_background_1"
        android:padding="@dimen/panel_padding_size" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView_parametre_last_synch_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/parametre_last_synch_label" />

            <TextView
                android:id="@+id/textView_parametre_last_synch_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />
        </LinearLayout>
    </TableRow>

</TableLayout>