<?xml version="1.0" encoding="utf-8"?>
<TableLayout android:id="@+id/tableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:shrinkColumns="*"
    android:stretchColumns="*"
    android:background="#2f3d4c"
    xmlns:android="http://schemas.android.com/apk/res/android">
 	<!-- TITRE DE LA VIEW -->

        <TextView
            android:id="@+id/Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="14dp"
            android:paddingTop="14dp"
            android:background="@drawable/titleBackground"
            android:textColor="#fcf1df"	
            android:text="@string/list_title"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="Roboto" >

		</TextView>
	<!-- DEBUT DES TABLES -->
   
   <TableRow
        android:layout_height="wrap_content"
        android:id="@+id/fiche1"
        android:background="@drawable/listItemBackground1"
    	android:textColor="#2f3d4c"
        android:paddingBottom="12dp"
        android:paddingTop="12dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:layout_width="match_parent">
        
        <TextView
            android:text="@string/list_icon_edit"
            android:id="@+id/iconeFiche1"
            android:textStyle="bold">
        </TextView>
        <TextView
            android:text="@string/list_fiche_number"
            android:id="@+id/numeroFiche1"
            android:gravity="center_horizontal">
		</TextView>
        <TextView
            android:text="@string/list_fiche_desc"
            android:id="@+id/descriptionFiche1"
            android:gravity="center_horizontal"
            android:maxWidth="120dp">
		</TextView>
    </TableRow>
    <TableRow
        android:layout_height="wrap_content"
        android:id="@+id/fiche2"
        android:background="@drawable/listItemBackground2"
    	android:textColor="#2f3d4c"
        android:paddingBottom="12dp"
        android:paddingTop="12dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:layout_width="match_parent">
        <TextView
            android:text="@string/list_icon_edit"
            android:id="@+id/iconeFiche2"
            android:textStyle="bold">
        </TextView>
        <TextView
            android:text="@string/list_fiche_number"
            android:id="@+id/numeroFiche2"
            android:gravity="center_horizontal">
		</TextView>
        <TextView
            android:text="@string/list_fiche_desc"
            android:id="@+id/descriptionFiche2"
            android:gravity="center_horizontal"
            android:maxWidth="120dp">
		</TextView>
    </TableRow>
    <TableRow
        android:layout_height="wrap_content"
        android:id="@+id/fiche3"
        android:background="@drawable/listItemBackground1"
    	android:textColor="#2f3d4c"
        android:paddingBottom="12dp"
        android:paddingTop="12dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:layout_width="match_parent">
        <TextView
            android:text="@string/list_icon_valid"
            android:id="@+id/iconeFiche3"
            android:textStyle="bold">
        </TextView>
        <TextView
            android:text="@string/list_fiche_number"
            android:id="@+id/numeroFiche3"
            android:gravity="center_horizontal">
		</TextView>
        <TextView
            android:text="@string/list_fiche_desc"
            android:id="@+id/descriptionFiche3"
            android:gravity="center_horizontal"
            android:maxWidth="120dp">
		</TextView>
    </TableRow>
</TableLayout>