<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.deep_blue.oxygen.activity.FicheSecuriteActivity" >

    <TableLayout
        android:id="@+id/fiche_infos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/fiche_infos_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView_fiche_infos_date_labelle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fiche_infos_date_labelle" />

            <TextView
                android:id="@+id/textView_fiche_infos_date_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />
            
        </TableRow>

        <TableRow
            android:id="@+id/fiche_infos_heure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            
             <TextView
                 android:id="@+id/textView_fiche_infos_heure_labelle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/fiche_infos_heure_labelle" />

            <TextView
                android:id="@+id/textView_fiche_infos_heure_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />
        </TableRow>

        <TableRow
            android:id="@+id/fiche_infos_site"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            
            <TextView
                android:id="@+id/textView_fiche_infos_site_labelle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fiche_infos_site_labelle" />

            <TextView
                android:id="@+id/textView_fiche_infos_site_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />
        </TableRow>

       <TableRow
            android:id="@+id/fiche_infos_directeur_plonge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            
            <TextView
                android:id="@+id/textView_fiche_infos_directeur_plonge_labelle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fiche_infos_directeur_plonge_labelle" />

            <TextView
                android:id="@+id/textView_fiche_infos_directeur_plonge_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />
        </TableRow>
        
       <TableRow
            android:id="@+id/fiche_infos_embarcation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </TableRow>
    </TableLayout>
    
     <TableLayout
        android:id="@+id/fiche_palanquees"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    </TableLayout>

</LinearLayout>
